--- a/packages/gatsby-plugin-quantcast/package.json
+++ b/packages/gatsby-plugin-quantcast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tymate/gatsby-plugin-quantcast",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Quantcast Choice plugin for Gatsby",
   "main": "index.js",
   "repository": "github.com/tymate/react-analytics",
@@ -28,5 +28,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "4f53ba8231c35c2726edbba88a6070ead6d27054"
 }
